ea/grid/styles.css
:root {
  --banner-height: 60px; /* Define banner height as a variable */
}

#loading {
    max-width: 200px;
    height: auto;
    position: fixed;
    top: calc((100% - var(--banner-height))/2);
    left: 50%;
    transform: translate(-50%, -50%);
}

* {
  box-sizing: border-box;
}

body, html {
  margin: 0;
  overflow: hidden;
  height: 100%;
  font-family: Arial, sans-serif;
  overflow-x: hidden;
}

.banner {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: var(--banner-height); /* Use the variable here */
  background-color: #38a8cc;
  color: white;
  font-size: 20px;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 3;
}

#pages,
#tiles {
  position: absolute;
  top: var(--banner-height); /* Use the variable here */
  left: 0;
  width: 100vw;
  height: calc(100% - var(--banner-height)); /* Use the variable here */
  overflow-y: scroll;
  transition: opacity 0.3s ease;
}

.container {
  position: absolute;
  top: 0;
  width: 50%;
  height: 100%;
  overflow: auto;
}

#pages {
  left: 100%; /* Start off-screen to the right */
  display: grid;
  grid-template-columns: 1fr;
  scroll-snap-type: y mandatory;
  transition: left 0.3s ease; /* Transition the left property */
  z-index: 1; /* Pages will be on top of Tiles on the z-axis */
}

#tiles {
  right: 0;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
  z-index: 0;
}

#tiles.invisible {
  opacity: 0;
  pointer-events: none; /* Disable interactions with Tiles */
}

.close-section {
  cursor: pointer; /* Add pointer cursor for the close button */
}

.page, .tile {
  display: flex;
  justify-content: center;
  align-items: center;
  color: white;
  font-size: 32px;
  padding: 50px;
}

.page {
  height: calc(100vh - var(--banner-height));
  position: relative;
  scroll-snap-align: start;
}

.tile {
  height: 300px;
  transition: transform 0.3s ease;
  cursor: pointer;
  padding: 30px;
}

.tile:hover {
  transform: scale(1.1); /* Scale the element to 110% of its original size */
}

.close-section {
  position: absolute;
  top: 15px;
  right: 15px;
  cursor: pointer;
}

